--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -1,5 +1,47 @@
-{% extends "base.html" %}
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> About Us </title>
+    <link rel="stylesheet" href="{{url_for('static',filename='css/aboutus.css')}}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+</head>
+<body>
+    <header>
+        <nav class="navbar">
+            <img src="{{ url_for('static',filename='images/logo.png') }}" alt="Logo" width="100" height="60" class=" align-text-top">
+            <ul id="list">
+                <li><a href="{{ url_for('main.index')}}"> Home </a></li>
+                <li><a href="{{ url_for('main.contactus')}}"> Contact Us </a></li>
+                <li><a href="{{ url_for('main.aboutus')}}"> About Us </a></li>
+            </ul>
+            <ul id="res">
+                <li><i class="fa-solid fa-bars"></i></li>
+            </ul>
+            <ul class="responsive">
+                <li><a href="{{ url_for('main.index')}}"> Home </a></li>
+                <li><a href="{{ url_for('main.contactus')}}"> Contact Us </a></li>
+                <li><a href="{{ url_for('main.aboutus')}}"> About Us </a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="home">
+        <div class="home-left">
+            <img src="{{url_for('static',filename='images/back1.jpg')}}" alt="">
+        </div>
+        <div class="home-right">
+            <h2 class="home-heading"> Expense Tracker </h2>
+            <p class="home-para">Expense tracker allows you to easily add and categorize 
+              your expenses, set budgets, and view detailed reports.</p>
+        </div>
+    </section>
+
     <section id="goal">
         <div class="goal-left">
             <h2>Our Mission</h2>
@@ -11,14 +53,14 @@
             </p>
         </div>
         <div class="goal-right">
-            <img src="" alt="">
+            <img src="{{url_for('static',filename='images/back2.jpg')}}" alt="">
         </div>
     </section>
     <section id="our-Team">
         <h2>Our Team Members</h2>
         <div class="teamContainer">
             <div class="team-item">
-                <img src="" alt="">
+                <img src="{{url_for('static',filename='images/Robert.jpeg')}}" alt="">
                 <h5 class="member-name">Robert Njonjo</h5>
                 <span class="role">Software Engineer</span>
                 <div class>
@@ -28,7 +70,7 @@
               </div>
             </div>
             <div class="team-item">
-                <img src="" alt="">
+                <img src="{{url_for('static',filename='images/dennis.jpeg')}}" alt="">
                 <h5 class="member-name">Dennis Kamau</h5>
                 <span class="role">Software Engineer</span>
                 <div class>
@@ -38,10 +80,10 @@
               </div>
             </div>
             <div class="team-item">
-                <img src="" alt="">
+                <img src="{{url_for('static',filename='images/Rimg.jpg')}}" alt="">
                 <h5 class="member-name">Rim El Filali</h5>
                 <span class="role">Software Engineer</span>
-                <div >
+                <div class>
                 <a href="https://github.com/Rima119"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
                 <a href="https://twitter.com/RimFilali"><i class="fab fa-twitter"></i></a>
@@ -49,4 +91,21 @@
             </div>
         </div>
     </section>
-{% endblock content %}
+    <footer>
+        <p> &copy; 2023 - All rights reserved - Expense Tracker</p>
+    </footer>
+</body>
+<script>
+  const resBtn = document.getElementById('res');
+  resBtn.addEventListener('click', function () {
+      const responsiveRight = document.querySelector('.responsive')
+      resBtn.classList.toggle('active')
+      if (resBtn.classList.contains('active')) {
+          responsiveRight.classList.add('active')
+      }
+      else {
+          responsiveRight.classList.remove('active')
+      }
+  })
+</script>
+</html>
