--- a/templates/calculate.html
+++ b/templates/calculate.html
@@ -1,8 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-<form action="{{ url_for('main.calculate')}}" method="post">
+<form action="{{ url_for('main.calculate')}}" method="post" class="form-group">
     <label for="total_income">Total Income:</label>
-    <input type="number" id="total_income" name="total_income" required><br><br>
-    <input type="submit" value="Calculate">
+    <fieldset class="form-group">
+      <div class="form-group">
+        <input type="number" id="total_income" name="total_income" required class="form-control">
+      </div>
+      <div class="form-group">
+        <input type="submit" value="Calculate" class="btn btn-outline-info">
+      </div>
+    </fieldset>
   </form>
 {% endblock content %}
