--- a/static/css/aboutus.css
+++ b/static/css/aboutus.css
@@ -17,7 +17,7 @@ header::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url();
+    background-image: url(/static/images/background.jpg);
     background-position: bottom;
     background-size: cover;
     opacity: 0.8;
