--- a/templates/index.html
+++ b/templates/index.html
@@ -1,95 +1,113 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{{ url_for('static',filename='css/main.css') }}">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="{{ url_for('main.index') }}">
-        <img src="{{ url_for('static',filename='css/images/logo.png') }}" alt="Logo" width="50" height="40" class="d-inline-block align-text-top">
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-  
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="{{ url_for('main.index') }}" >
-                  Home
-              </a>
-              </li>
-              {% if current_user.is_authenticated %}
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('main.profile') }}" >
-                  Profile
-              </a>
-              </li>
-              {% endif %}
-              {% if not current_user.is_authenticated %}
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('auth.login') }}" >
-                  Login
-              </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('auth.signup') }}" >
-                  Sign Up
-              </a>
-              </li>
-              {% endif %}
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('auth.logout') }}">
-                  Logout
-              </a>
-              </li>
-              
-          </ul>
-      </div>
-    </nav>
-    <header>
-    <div id="hero-text">
-      <h1>Expense Tracker App</h1>
-      <p>Don't go spending all your money without a plan</p>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Homepage</title>
+  <link rel="stylesheet" href="{{ url_for('static',filename='css/main.css') }}">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <style>
+    /* Add your custom styles here */
+  </style>
+</head>
+<body>
+  {% include "navbar.html" %}
+  <section class="jumbotron text-center" style="background-image: url(static/images/back3.jpg);">
+    <div class="container">
+      <h3 style="color: blanchedalmond;">Track your expenses and manage your finances with ease using our ExpenseTracker.</h3>
     </div>
-    <div id="scroll"></div>
-  </header>
-  <div id="content">
-    <section class="info">
-      <p>Business</p>
-      <p>For business people, maintaining an accurate expense tracker is vital for financial control and decision-making. By recording and categorizing expenses, they gain insights into spending patterns, identify areas of overspending or cost-saving opportunities, and track the profitability of their ventures. Expense tracking enables budgeting, tax preparation, and financial reporting, aiding in maintaining a healthy bottom line and optimizing business operations.</p>
-      <div class="button">
-        <a href="{{ url_for('main.add') }} ">Add An Expense</a>
-      </div>
-    </section>
-    <section class="info">
-      <p>Family</p>
-      <p>Families also benefit greatly from expense tracking. By keeping track of expenses, families can create and stick to budgets, manage bills and recurring payments, set savings goals, and track their progress. It allows them to identify areas where they can cut costs, reduce unnecessary spending, and allocate funds for important family priorities such as education, vacations, or emergencies.</p>
-      <div class="button">
-        <p>Add An Expense</p>
-      </div>
-    </section>
-    <section class="info">
-      <p>Personal</p>
-      <p>Families also benefit greatly from expense tracking. By keeping track of expenses, families can create and stick to budgets, manage bills and recurring payments, set savings goals, and track their progress. It allows them to identify areas where they can cut costs, reduce unnecessary spending, and allocate funds for important family priorities such as education, vacations, or emergencies.</p>
-      <div class="button">
-        <p>Add An Expense</p>
-      </div>
-    </section>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="{{url_for('static',filename='main.js')}}"></script>
-  </body>
+  </section>
+
+  <h2 class = "text-center" style="white-space: pre-wrap; color:midnightblue;">Who Can Use Our Expense Tracker?</h2>
+  <br>
+  <section class="container text-center">
+    <br><br>
+    <div class="card">
+      <div class="card-image car-1"></div>
+      <h3 class>Business</h3>
+      <p>For business owners, maintaining an accurate expense tracker is vital for financial control and decision-making. By recording and categorizing expenses, they gain insights into spending patterns, identify areas of overspending or cost-saving opportunities, and track the profitability of their ventures. Expense tracking enables budgeting, tax preparation, and financial reporting, aiding in maintaining a healthy bottom line and optimizing business operations.</p>
+    </div>
+    <div class="card">
+      <div class="card-image car-2"></div>
+      <h3 class>Family</h3>
+      <p>By keeping track of expenses, families can create and stick to budgets, manage bills and recurring payments, set savings goals, and track their progress. It allows them to identify areas where they can cut costs, reduce unnecessary spending, and allocate funds for important family priorities such as education, vacations, or emergencies.</p>
+    </div>
+    <div class="card">
+      <div class="card-image car-3"></div>
+      <h3 class>Personal</h3>
+      <p>Expense tracking is valuable for individuals who want to gain control over their personal finances. By tracking expenses, individuals can develop a clear understanding of their spending habits, identify areas where they can save money, and work towards their financial goals. It enables them to make informed decisions about their spending, reduce debt, save for retirement, and achieve overall financial well-being.</p>
+    </div>
+  </section>
+
+
+  <br><br>
+
+  <h2 class = "text-center" style="white-space: pre-wrap; color:midnightblue;">Features</h2>
+  <br>
+  <section class="container text-center">
+    <div class="card">
+      <div class="card-image car-4"></div>
+      <h3 class>Expense Tracking</h3>
+      <p>Track your expenses and categorize them for easy analysis.</p>
+    </div>
+    <div class="card">
+      <div class="card-image car-5"></div>
+      <h3 class>Budgeting</h3>
+      <p>Create budgets for different categories and track your spending.</p>
+    </div>
+    <div class="card">
+      <div class="card-image car-6"></div>
+      <h3 class>Reports</h3>
+      <p>Generate reports to get insights into your spending habits.</p>
+    </div>
+  </section>
+
+  <br><br>
+  <footer class="footer">
+    <div class="block">
+      <div class="row">
+        <div class="footer-col">
+          <h4>
+            <img src="{{ url_for('static',filename='images/logo.png')}}" alt="Logo">
+            Expense Tracker
+          </h4>
+        </div>
+
+        <div class="footer-col">
+          <h4>Useful Links</h4>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="contactus.html">Contact Us</a></li>
+            <li><a href="faqs.html">FAQ</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-col">
+          <h4>Reach us at:</h4>
+          <div class="social-links">
+            <a href="https://github.com/Dkemzy/alx-webstack-portfolio-project"><i class="fab fa-github"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+          </div>  
+        </div>
+
+        <div class="footer-col">
+          <h4>Address</h4>  
+        </div>
+  <div class="container text-center">
+    <span class="text-muted">© 2023 Expense Tracker. All rights reserved.</span>
+  </div>
+</footer>
+
+  <script>
+    function openRegistrationForm() {
+      var registrationForm = document.getElementById("registrationForm");
+      registrationForm.classList.add("registration-form-visible");
+    }
+  </script>
+</body>
 </html>
