final changes to ui and routes

--- a/templates/calculate.html
+++ b/templates/calculate.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<form action="{{ url_for('main.calculate')}}" method="post" class="form-group">
+<form action="{{ url_for('main.calculate')}}" method="post" class="container">
     <label for="total_income">Total Income:</label>
     <fieldset class="form-group">
       <div class="form-group">
