--- a/templates/result.html
+++ b/templates/result.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
+<section style="text-align:center; text-size"
 <h1>50/30/20 Calculator - Result</h1>
     <p>Necessities (50%): {{ necessities }}</p>
     <p>Wants (30%): {{ wants }}</p>
     <p>Savings (20%): {{ savings }}</p>
+</section>
 {% endblock content %}
