--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -16,19 +16,48 @@
     <header>
         <nav class="navbar">
             <img src="{{ url_for('static',filename='images/logo.png') }}" alt="Logo" width="100" height="60" class=" align-text-top">
-            <ul id="list">
-                <li><a href="{{ url_for('main.index')}}"> Home </a></li>
-                <li><a href="{{ url_for('main.contactus')}}"> Contact Us </a></li>
-                <li><a href="{{ url_for('main.aboutus')}}"> About Us </a></li>
-            </ul>
-            <ul id="res">
-                <li><i class="fa-solid fa-bars"></i></li>
-            </ul>
-            <ul class="responsive">
-                <li><a href="{{ url_for('main.index')}}"> Home </a></li>
-                <li><a href="{{ url_for('main.contactus')}}"> Contact Us </a></li>
-                <li><a href="{{ url_for('main.aboutus')}}"> About Us </a></li>
-            </ul>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="{{ url_for('main.index') }}" >
+            Home
+        </a>
+        </li>
+        {% if current_user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('main.aboutus') }}" >
+            About Us
+        </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('main.contactus') }}" >
+            Contact Us
+        </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('main.faqs') }}" >
+            FAQS
+        </a>
+        </li>
+        {% endif %}
+        {% if not current_user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('auth.login') }}" >
+            Login
+        </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('auth.signup') }}" >
+            Sign Up
+        </a>
+        </li>
+        {% endif %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('auth.logout') }}">
+            Logout
+        </a>
+        </li>
+    </div>
         </nav>
     </header>
     <section id="home">
