--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,9 @@
   <section class="jumbotron text-center" style="background-image: url(static/images/back3.jpg);">
     <div class="container">
       <h3 style="color: blanchedalmond;">Track your expenses and manage your finances with ease using our ExpenseTracker.</h3>
+      {% if current_user.is_authenticated %}
+      <button style="margin-top:40px;" onclick=gotoExpenses() class="btn btn-primary">My Expenses</button>
+      {% endif %}
     </div>
   </section>
 
@@ -77,11 +80,15 @@
         <div class="footer-col">
           <h4>Useful Links</h4>
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="aboutus.html">About Us</a></li>
-            <li><a href="contactus.html">Contact Us</a></li>
-            <li><a href="faqs.html">FAQ</a></li>
+          {% if current_user.is_authenticated %}
+            <li><a href="{{ url_for('main.index')}}">Home</a></li>
+            <li><a href="{{ url_for('main.aboutus')}}">About Us</a></li>
+            <li><a href="{{ url_for('main.contactus')}}">Contact Us</a></li>
+            <li><a href="{{ url_for('main.faqs')}}">FAQ</a></li>
+            {% endif %}
+          {% if not current_user.is_authenticated %}
+            <li><a href="{{ url_for('auth.login')}}">Login</a></li>
+          {% endif %}
           </ul>
         </div>
 
@@ -107,6 +114,9 @@
     function openRegistrationForm() {
       var registrationForm = document.getElementById("registrationForm");
       registrationForm.classList.add("registration-form-visible");
+    }
+    function gotoExpenses(){
+      window.location.href = "{{ url_for('main.expenses')}}";
     }
   </script>
 </body>
