--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,6 +20,16 @@
             About Us
         </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('main.contactus') }}" >
+            Contact Us
+        </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('main.faqs') }}" >
+            FAQS
+        </a>
+        </li>
         {% endif %}
         {% if not current_user.is_authenticated %}
         <li class="nav-item">
