--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -93,8 +93,8 @@
                 <h5 class="member-name">Robert Njonjo</h5>
                 <span class="role">Software Engineer</span>
                 <div class>
-                <a href="https://github.com/"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/M1urray"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/robert-njonjo"><i class="fab fa-linkedin"></i></a>
                 <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
               </div>
             </div>
@@ -103,8 +103,8 @@
                 <h5 class="member-name">Dennis Kamau</h5>
                 <span class="role">Software Engineer</span>
                 <div class>
-                <a href="https://github.com/"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/Dkemzy"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/kamau-dennis-b3155b153"><i class="fab fa-linkedin"></i></a>
                 <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
               </div>
             </div>
@@ -114,7 +114,7 @@
                 <span class="role">Software Engineer</span>
                 <div class>
                 <a href="https://github.com/Rima119"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/rim-el-filali-0710a6269/"><i class="fab fa-linkedin"></i></a>
                 <a href="https://twitter.com/RimFilali"><i class="fab fa-twitter"></i></a>
                 </div>
             </div>
