--- a/templates/index.html
+++ b/templates/index.html
@@ -56,13 +56,19 @@
     </div>
     <div class="card">
       <div class="card-image car-5"></div>
-      <h3 class>Budgeting</h3>
-      <p>Create budgets for different categories and track your spending.</p>
+      <h3 class>User authentication</h3>
+      <p>Securely log in and out of the system and reset the password if forgotten.</p>
     </div>
     <div class="card">
       <div class="card-image car-6"></div>
-      <h3 class>Reports</h3>
-      <p>Generate reports to get insights into your spending habits.</p>
+      <h3 class>Manage Expenses</h3>
+      <p>Add, edit, or delete Expenses easily.</p>
+    </div>
+    <div class="card">
+      <div class="card-image car-7"></div>
+      <h3 class>50/30/20 Calculator</h3>
+      <p>Calculate necessities, needs and wants according to the 50/30/20 model of money management.
+      </p>
     </div>
   </section>
 
